--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
     <div class="container">
         <header>
             <h1>TSP Integrality Gap Visualizer</h1>
-            <p>Explore how different city structures and different algorithms affect the integrality gap in TSP
-                algorithms.</p>
+            <p>Explore how different city structures and different algorithms affect the integrality gap in the TSP
+                Problem.</p>
         </header>
 
         <div class="controls">
